# django-allauth-2f2a

./: .flake8  .gitignore  .pre-commit-config.yaml  CHANGELOG.rst  LICENSE  LICENSE.rst  MANIFEST.in  Makefile  README.rst  freeze.sh  manage.py  pyproject.toml  requirements.txt  setup.cfg  setup.py  tox.ini
allauth_2f2a/: __init__.py  adapter.py  app_settings.py  forms.py  middleware.py  mixins.py  urls.py  utils.py  views.py
docs/: Makefile  advanced.rst  changelog.rst  conf.py  configuration.rst  index.rst  installation.rst  license.rst  links.rst
tests/: __init__.py  forms.py  run_settings.py  settings.py  test_allauth_2f2a.py  test_allauth_2fa.py  urls.py
