# ******************************************************************************
#
# SPDX-License-Identifier: Apache-2.0
#
# django-allauth-2f2a, a 2fa adapter for django-allauth.
#
# ******************************************************************************
#
# Copyright 2016-2021 Víðir Valberg Guðmundsson and Percipient
# Networks, LLC.
# Copyright 2021-2022 Jeremy A Gray <gray@flyquackswim.com>.
#
# Licensed under the Apache License, Version 2.0 (the "License"); you
# may not use this file except in compliance with the License.  You
# may obtain a copy of the License at
#
# http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or
# implied.  See the License for the specific language governing
# permissions and limitations under the License.
#
# ******************************************************************************

[metadata]

author = Jeremy A Gray
author_email = gray@flyquackswim.com
description = Django allauth adapter for two factor authentication.
license = Apache-2.0
license_file = LICENSE
long_description = file: README.rst
long_description_content_type = text/x-rst
maintainer = Jeremy A Gray
maintainer_email = gray@flyquackswim.com
name = django-allauth-2f2a
url = https://github.com/jeremyagray/django-allauth-2f2a
version = 0.9.1

classifiers =
  Development Status :: 3 - Alpha
  Framework :: Django :: 2.2
  Framework :: Django :: 3.2
  Framework :: Django :: 4.0
  Programming Language :: Python :: 3.6
  Programming Language :: Python :: 3.7
  Programming Language :: Python :: 3.8
  Programming Language :: Python :: 3.9
  Programming Language :: Python :: 3.10

[options]

include-package-data = true
packages = find:

install_requires =
  Django
  Pillow
  django-autoslug
  psycopg2

tests_require =
  Sphinx
  black
  flake8
  flake8-docstrings
  isort
  pccc
  pre-commit
  pytest
  pytest-cov
  pytest-django
